--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@react-spring/parallax": "^9.7.3",
     "@react-spring/web": "^9.7.3",
     "@react-three/fiber": "^8.2.2",
+    "@tsparticles/react": "^3.0.0",
     "@types/node": "20.6.3",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
@@ -59,6 +60,7 @@
     "react-toastify": "^10.0.5",
     "react-type-animation": "^3.1.0",
     "recharts": "^2.12.7",
+    "rellax": "^1.12.1",
     "swiper": "^11.1.4",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
